feat: Update app name and add loan purpose field
Renames the application to "Ka bwangu Xtenda Salary Advance" and updates metadata accordingly. Adds a `loanPurpose` field to the applicant's types, indicating the intention to collect this information in future form updates.

Refactors the navigation flow to use distinct pages ('home', 'apply', 'contact') instead of a general 'app' state. Introduces shared state for loan summary details to facilitate passing data between the calculator and the application form. Updates the header and "How It Works" components to utilize the new navigation and scrolling logic.

Enhances the Salary Calculator component to allow navigation to the application page and to communicate the calculated loan details to the parent component. Includes UI adjustments for the header and calculator to improve user experience.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xtenda-salary-advance",
+  "name": "ka-bwangu-xtenda-salary-advance",
   "private": true,
   "version": "0.0.0",
   "type": "module",
