feat: Update app name and dependencies
This commit rebrands the application from "Xtenda Salary Advance" to "Ka Bwangu Bwangu Salary Advance" and updates the project name in package.json.

It also introduces several new dependencies:
- `@google/genai`: Likely for integrating generative AI features.
- `@emailjs/browser`: For handling email sending functionality.
- `firebase`: To integrate with Firebase services for backend operations.

The README and index.html are updated to reflect the new branding. Minor cleanup is done in index.tsx. The `types.ts` file is expanded to include fields for status history, bank details, and other relevant application data, along with initial status and timestamps. The App.tsx component is refactored to support new views such as 'about', 'check-status', and 'employers', and includes components for admin login, remote uploads, submission status, application review, and checking application status. The Header component is updated to accommodate the new navigation views.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Xtenda Salary Advance",
-  "short_name": "Xtenda Advance",
+  "name": "ka bwangu bwangu",
+  "short_name": "ka bwangu",
   "description": "Get fast and easy salary advances. Calculate your loan and apply in minutes.",
   "id": "/?source=pwa",
   "start_url": "/?source=pwa",
